Modernize OsqueryService with Java 17+ features and improved process handling
- Replace Runtime.exec() with ProcessBuilder for better resource management
- Add query execution time logging to all osquery operations
- Implement process timeouts: 5s for version check, 30s for queries
- Use Java 17+ features: text blocks for SQL, .formatted(), better exception handling
- Fix SQL queries to use correct column names (user_time + system_time)
- Update tests to match new error handling behavior
- Add test log file to .gitignore

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>