@@ -6,6 +6,9 @@ import org.slf4j.LoggerFactory;
 import org.springframework.ai.tool.annotation.Tool;
 import org.springframework.stereotype.Service;
 
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+
 @Service
 public class OsqueryService {
     private static final Logger logger = LoggerFactory.getLogger(OsqueryService.class);
@@ -13,14 +16,28 @@ public class OsqueryService {
     @PostConstruct
     public void checkOsqueryAvailable() {
         try {
-            Process p = Runtime.getRuntime().exec(new String[]{"osqueryi", "--version"});
-            int exitCode = p.waitFor();
+            ProcessBuilder pb = new ProcessBuilder("osqueryi", "--version");
+            Process p = pb.start();
+            
+            boolean completed = p.waitFor(5, TimeUnit.SECONDS);
+            if (!completed) {
+                p.destroyForcibly();
+                logger.error("Osquery version check timed out after 5 seconds");
+                return;
+            }
+            int exitCode = p.exitValue();
             if (exitCode == 0) {
-                String version = new String(p.getInputStream().readAllBytes()).trim();
+                String version;
+                try (var reader = p.inputReader()) {
+                    version = reader.lines().collect(Collectors.joining("\n")).trim();
+                }
                 logger.info("Osquery is available: {}", version);
             } else {
                 logger.error("Osquery check failed with exit code: {}", exitCode);
             }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            logger.error("Osquery version check was interrupted", e);
         } catch (Exception e) {
             logger.error("Osquery is not available. Please install osquery: https://osquery.io/downloads/", e);
         }
@@ -31,15 +48,50 @@ public class OsqueryService {
          Example: SELECT name, pid FROM processes""")
     public String executeOsquery(String sql) {
         logger.debug("Executing osquery SQL: {}", sql);
+        long startTime = System.currentTimeMillis();
+        
         try {
-            Process p = Runtime.getRuntime().exec(
-                    new String[]{"osqueryi", "--json", sql}
-            );
-            String result = new String(p.getInputStream().readAllBytes());
-            logger.debug("Query completed successfully, returned {} bytes", result.length());
+            ProcessBuilder pb = new ProcessBuilder("osqueryi", "--json", sql);
+            Process p = pb.start();
+            
+            // Read the output
+            String result;
+            try (var reader = p.inputReader()) {
+                result = reader.lines().collect(Collectors.joining("\n"));
+            }
+            
+            // Wait for process to complete with timeout
+            boolean completed = p.waitFor(30, TimeUnit.SECONDS);
+            long executionTime = System.currentTimeMillis() - startTime;
+            
+            if (!completed) {
+                p.destroyForcibly();
+                logger.error("Query timed out after 30 seconds: {}", sql);
+                return "Error: Query execution timed out after 30 seconds";
+            }
+            
+            int exitCode = p.exitValue();
+            
+            if (exitCode != 0) {
+                // Read error stream if command failed
+                String errorOutput;
+                try (var errorReader = p.errorReader()) {
+                    errorOutput = errorReader.lines().collect(Collectors.joining("\n"));
+                }
+                logger.error("Osquery exited with code {} after {}ms. Error: {}", exitCode, executionTime, errorOutput);
+                return "Error: " + errorOutput;
+            }
+            
+            logger.debug("Query completed successfully in {}ms, returned {} bytes", executionTime, result.length());
             return result;
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            long executionTime = System.currentTimeMillis() - startTime;
+            logger.error("Query interrupted after {}ms: {}", executionTime, sql, e);
+            return "Error: Query execution was interrupted";
         } catch (Exception e) {
-            logger.error("Failed to execute osquery: {}", sql, e);
+            long executionTime = System.currentTimeMillis() - startTime;
+            logger.error("Failed to execute osquery after {}ms: {}", executionTime, sql, e);
             return "Error: " + e.getMessage();
         }
     }
@@ -56,7 +108,7 @@ public class OsqueryService {
          Example: getTableSchema("processes")""")
     public String getTableSchema(String tableName) {
         logger.debug("Getting schema for table: {}", tableName);
-        return executeOsquery(String.format("PRAGMA table_info(%s)", tableName));
+        return executeOsquery("PRAGMA table_info(%s)".formatted(tableName));
     }
 
     @Tool(description = """
@@ -72,7 +124,7 @@ public class OsqueryService {
             Common diagnostic queries:
             
             1. Top CPU consuming processes:
-               SELECT name, pid, uid, cpu_time FROM processes ORDER BY cpu_time DESC LIMIT 10
+               SELECT name, pid, uid, (user_time + system_time) AS cpu_time FROM processes ORDER BY cpu_time DESC LIMIT 10
             
             2. Memory usage by process:
                SELECT name, pid, resident_size, total_size FROM processes ORDER BY resident_size DESC LIMIT 10
@@ -102,11 +154,11 @@ public class OsqueryService {
          Returns the top 10 processes consuming the most CPU time.
          Useful for answering 'Why is my computer slow?' or 'What's using CPU?'""")
     public String getHighCpuProcesses() {
-        return executeOsquery(
-            "SELECT name, pid, uid, cpu_time, " +
-            "ROUND((cpu_time * 100.0 / (SELECT SUM(cpu_time) FROM processes)), 2) AS cpu_percent " +
-            "FROM processes ORDER BY cpu_time DESC LIMIT 10"
-        );
+        return executeOsquery("""
+            SELECT name, pid, uid, (user_time + system_time) AS cpu_time,
+            ROUND(((user_time + system_time) * 100.0 / (SELECT SUM(user_time + system_time) FROM processes)), 2) AS cpu_percent
+            FROM processes ORDER BY cpu_time DESC LIMIT 10
+            """);
     }
 
     @Tool(description = """
@@ -114,12 +166,12 @@ public class OsqueryService {
          Returns the top 10 processes consuming the most memory.
          Useful for answering 'What's using all my RAM?' or 'Why is memory full?'""")
     public String getHighMemoryProcesses() {
-        return executeOsquery(
-            "SELECT name, pid, uid, " +
-            "ROUND(resident_size / 1024.0 / 1024.0, 2) AS resident_mb, " +
-            "ROUND(total_size / 1024.0 / 1024.0, 2) AS total_mb " +
-            "FROM processes ORDER BY resident_size DESC LIMIT 10"
-        );
+        return executeOsquery("""
+            SELECT name, pid, uid,
+            ROUND(resident_size / 1024.0 / 1024.0, 2) AS resident_mb,
+            ROUND(total_size / 1024.0 / 1024.0, 2) AS total_mb
+            FROM processes ORDER BY resident_size DESC LIMIT 10
+            """);
     }
 
     @Tool(description = """
@@ -127,13 +179,13 @@ public class OsqueryService {
          Shows active network connections with process information.
          Useful for 'What's connected to the internet?' or 'What's using my network?'""")
     public String getNetworkConnections() {
-        return executeOsquery(
-            "SELECT DISTINCT p.name, p.pid, pos.local_address, pos.local_port, " +
-            "pos.remote_address, pos.remote_port, pos.state " +
-            "FROM process_open_sockets pos " +
-            "JOIN processes p ON pos.pid = p.pid " +
-            "WHERE pos.state = 'ESTABLISHED' OR pos.state = 'LISTEN'"
-        );
+        return executeOsquery("""
+            SELECT DISTINCT p.name, p.pid, pos.local_address, pos.local_port,
+            pos.remote_address, pos.remote_port, pos.state
+            FROM process_open_sockets pos
+            JOIN processes p ON pos.pid = p.pid
+            WHERE pos.state = 'ESTABLISHED' OR pos.state = 'LISTEN'
+            """);
     }
 
     @Tool(description = """
@@ -144,6 +196,11 @@ public class OsqueryService {
         // This combines temperature and fan data
         String temps = executeOsquery("SELECT name, celsius FROM temperature_sensors");
         String fans = executeOsquery("SELECT name, actual_speed, min_speed, max_speed FROM fan_control_sensors");
-        return String.format("Temperature sensors:\n%s\n\nFan speeds:\n%s", temps, fans);
+        return """    
+            Temperature sensors:
+            %s
+            
+            Fan speeds:
+            %s""".formatted(temps, fans);
     }
 }
